# ScreenshotTool

./: .cursorrules  .gitignore  CMakeLists.txt  README.md  ScreenshotTool.cpp  ScreenshotTool.h  main.cpp
